~ licence MIT ~ bigger index.html (more testing posibilities) + pf (parseHTML or queySelector) + Manipulation part (in Element)

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "jQuery"
   ],
   "author": "Purexo",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Purexo/polyfill-dom.js/issues"
   },
